--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
 
 application {
-    mainClass = 'hexlet.code.App'
+    mainClass = 'hexlet.code.Validator'
 }
 
 repositories {
